apps/blog/k8s/pr-preview/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: pr-${PR_NUMBER}
spec:
  selector:
    app: blog
  ports:
    - port: 80
      targetPort: 3000
